# vajeh-infra

./: .editorconfig  .gitignore  Makefile  project.env.json  pyproject.toml  release.yaml  tasks.py
.github/workflows/: deploy.yml  deploy_pull_request.yml  post_pr.yml  pull_request.yml  release.yml
docker/: pipeline.Dockerfile
terraform/: .terraform.lock.hcl  Makefile  iam.tf  main.tf  networking.tf  outputs.tf  project-auth.tf  project-user.tf  project.tf  route53.tf  storage.tf  user.tf  users.auto.tfvars  variables.tf
terraform/network/: main.tf  outputs.tf  subnet.tf  subnets.tf  variables.tf  vpc.tf
terraform/policies/: outputs.tf  s3.tf  secretmanager.tf  user_pool.tf  variables.tf
terraform/project/: groups.tf  iam_groups.tf  iam_pipeline.tf  iam_users.tf  main.tf  terraform-state.tf  users.tf  variables.tf
terraform/user/: iam.tf  user.tf  variable.tf  variables.tf
