[tool.poetry]
name = "vajeh-infra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vajeh_infra"}]

[virtualenvs]
create = true
in-project = true
path = ".venv"

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
